--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,9 @@
 fastapi==0.98.0
 pydantic==1.10.2
 SQLAlchemy==2.0.17
-starlette==0.28.0
+starlette==0.27.0
 uvicorn==0.22.0
+alembic==1.11.1
+argon2-cffi
+psycopg2-binary
+pyjwt==2.7.0
