--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:ilovebigblackcock69@localhost/postgres2
+sqlalchemy.url = postgresql://postgres:password@localhost/db_name
 
 
 [post_write_hooks]
