--- a/.env.default
+++ b/.env.default
@@ -25,5 +25,8 @@ SMTP_PASSWORD=zwnzditfpwtzubsm
 # JWT signing secret key
 JWT_SECRET=secret_key
 
+# Fernet Encryption Key
+FERNET_KEY = HtZBSefVPnMi0BVt6NZ2XVliLRFHeJfzlWIZSF6cslg=
+
 # CORS origins in Access-Control-Allow-Origin
 CORS_ALLOW_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
