--- a/.env.default
+++ b/.env.default
@@ -27,3 +27,5 @@ JWT_SECRET=secret_key
 
 # CORS origins in Access-Control-Allow-Origin
 CORS_ALLOW_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+
+ENVIRONMENT=dev
