--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,3 @@
-# modified from https://stackoverflow.com/a/61721608/19506738 and https://github.com/alehpineda/fastapi_test/blob/master/.github/workflows/cicd.yml
 name: Test
 
 on:
@@ -13,7 +12,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    name: Run unit tests
     services:
       postgres:
         image: postgres:latest
@@ -34,7 +33,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
         
-      - name: Set - nameup Python
+      - name: Setup Python
         uses: actions/setup-python@v1
         with:
           python-version: '3.10'
@@ -63,7 +62,7 @@ jobs:
     env:
       META_SERVER_PORT: 9000
       BACKEND_SERVER_PORT: 8000
-      SQLALCHEMY_URL: postgresql://postgres:postgres@localhost/postgres
+      SQLALCHEMY_URL: postgresql://postgres:postgres@localhost:5432/postgres
     services:
       postgres:
         image: postgres:latest
@@ -79,6 +78,10 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+    permissions: 
+      security-events: write
+      statuses: write
+      issues: write
     needs: test
     runs-on: ubuntu-latest
     name: DAST with ZAP API scan
@@ -86,7 +89,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
         
-      - name: Set - nameup Python
+      - name: Set up Python
         uses: actions/setup-python@v1
         with:
           python-version: '3.10'
@@ -114,5 +117,12 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           format: openapi
           target: 'http://127.0.0.1:${{ env.BACKEND_SERVER_PORT }}/openapi.json'
-          cmd_options: '-f openapi'  
+          allow_issue_writing: true
+          cmd_options: '-r report.html -w report.md -J report.json -d'  # r/w/J - html/md/json reports, d - debug msgs
+        
+      - uses: actions/upload-artifact@v3
+        with:
+          name: zap-api-scan-report
+          path: report.*
+
         
