--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,6 @@ jobs:
     permissions: 
       security-events: write
       statuses: write
-      issues: write
       actions: write
       checks: read
       contents: read
@@ -109,10 +108,9 @@ jobs:
             http-get://127.0.0.1:${{ env.BACKEND_SERVER_PORT }}/
             http-get://127.0.0.1:${{ env.META_SERVER_PORT }}/access-flags
           tail: true  # monitor the progress live
-          log-output-resume: stderr  # Eliminates previosuly output stderr log entries from post-run output
           wait-for: 1m  # timeout 1 minute
-          log-output: stderr,stdout
-          log-output-if: failure
+          log-output: true
+          log-output-if: true
 
       - name: Run ZAP API DAST Scan
         uses: zaproxy/action-api-scan@v0.4.0
@@ -121,5 +119,4 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           format: openapi
           target: 'http://127.0.0.1:${{ env.BACKEND_SERVER_PORT }}/openapi.json'
-          allow_issue_writing: true
-          cmd_options: '-d'
+          allow_issue_writing: false
