--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,9 +62,10 @@ jobs:
         run: pip install bandit
       
       - name: Run Bandit
-        run: bandit -li -f html -o report.html -r backend
+        run: bandit -li -f html -o report.html -f screen -r backend meta admin
       
       - uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: bandit-report
           path: report.html
