--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,3 @@
-# modified from https://stackoverflow.com/a/61721608/19506738 and https://github.com/alehpineda/fastapi_test/blob/master/.github/workflows/cicd.yml
 name: Test
 
 on:
@@ -13,7 +12,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    name: Run unit tests
     services:
       postgres:
         image: postgres:latest
@@ -34,7 +33,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
         
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v1
         with:
           python-version: '3.10'
@@ -46,15 +45,99 @@ jobs:
         run: make test
   
   sast:
-    needs: test
+
     runs-on: ubuntu-latest
-    name: SAST testing with PyCharm Security
+    name: SAST with Bandit
+    needs: test
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-
-      - name: Run PyCharm Security
-        uses: tonybaloney/pycharm-security@master
+      
+      - name: Set up Python
+        uses: actions/setup-python@v1
         with:
-          path: backend/
-          fail_on_warnings: yes
+          python-version: '3.10'
+      
+      - name: Install Bandit
+        run: pip install bandit
+      
+      - name: Run Bandit
+        run: bandit -li -f html -o report.html -f screen -r backend meta admin
+      
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: bandit-report
+          path: report.html
+      
+
+  
+  dast:
+    env:
+      META_SERVER_PORT: 9000
+      BACKEND_SERVER_PORT: 8000
+      SQLALCHEMY_URL: postgresql://postgres:postgres@localhost:5432/postgres
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: postgres        
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+        ports:
+          - 5432:5432
+        # Wait for Postgres to start
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    permissions: 
+      security-events: write
+      statuses: write
+      actions: write
+      checks: read
+      contents: read
+      deployments: read
+    needs: test
+    runs-on: ubuntu-latest
+    name: DAST with ZAP API scan
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+        
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.10'
+        
+      - name: Set up project
+        run: make init
+      
+      - uses: JarvusInnovations/background-action@v1
+        name: Run backend in background
+        with:
+          run: |
+            uvicorn backend:app --host 0.0.0.0 --port ${{ env.BACKEND_SERVER_PORT }} --env-file .env --log-config .github/workflows/backend-logger.ini &
+            uvicorn meta:app --host 0.0.0.0 --port ${{ env.META_SERVER_PORT }} --env-file .env &
+          wait-on: |
+            http-get://127.0.0.1:${{ env.BACKEND_SERVER_PORT }}/
+            http-get://127.0.0.1:${{ env.META_SERVER_PORT }}/access-flags
+          tail: true  # monitor the progress live
+          wait-for: 1m  # timeout 1 minute
+          log-output: true
+          log-output-if: true
+
+      - name: Run ZAP API DAST Scan
+        uses: zaproxy/action-api-scan@v0.4.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          format: openapi
+          target: 'http://127.0.0.1:${{ env.BACKEND_SERVER_PORT }}/openapi.json'
+          allow_issue_writing: false
+        
+      - uses: actions/upload-artifact@v3
+        with:
+          name: backend-log
+          path: backend.log
